--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -1,6 +1,11 @@
 @import 'variables';
 @charset "utf-8";
 
+@media (max-width: 1550px){
+	.site-title {
+		font-size: 4rem;
+	}
+}
 @media (max-width: 1359px){
 }
 
